tests/rosetta/out/Zig/arithmetic-geometric-mean.error
zig build: exit status 1
/tmp/arithmetic-geometric-mean.zig:17:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/arithmetic-geometric-mean.zig:17:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
/tmp/arithmetic-geometric-mean.zig:27:20: error: root struct of file 'math' has no member named 'abs'
/tmp/zig-0.12.0/lib/std/math.zig:1:1: note: struct declared here
